build: temporary fix for node-gyp vulnerability

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/mmarchini/node-linux-perf#readme",
   "dependencies": {
     "nan": "^2.10.0",
-    "node-gyp": "^3.6.2"
+    "node-gyp": "3.6.2"
   },
   "devDependencies": {
     "clang-format": "^1.2.3",
