--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   "homepage": "https://github.com/mmarchini/node-linux-perf#readme",
   "dependencies": {
     "nan": "^2.10.0",
-    "node-gyp": "3.6.2"
+    "node-gyp": "^4.0.0"
   },
   "devDependencies": {
     "clang-format": "^1.2.3",
-    "tap": "^12.0.1"
+    "tap": "^12.6.5"
   },
   "engines": {
     "node": ">=10.4.0"
